--- a/src/mixnins.scss
+++ b/src/mixnins.scss
@@ -1,3 +1,8 @@
+@mixin ssm {
+    @media only screen and (min-width: 480px) {
+        @content;
+    }
+}
 @mixin sm {
     @media only screen and (min-width: 640px) {
         @content;
