--- a/src/components/starRating/style.scss
+++ b/src/components/starRating/style.scss
@@ -10,6 +10,7 @@
 
 .ratingButton{
     width: 200px;
+    cursor:pointer;
     &:hover{
         color: #ffd700;
         background-color: var(--black);
